<resources>
    <string name="app_name">CT-Harshitha-Android</string>
    <string name="btn">Create profile</string>
    <string name="btn3">Update Profile</string>
    <string name="Customer">Customer</string>
    <string name="InboxButton">App Inbox</string>
    <string name="title_location_permission">Location permission</string>
    <string name="text_location_permission">"Allow "</string>
    <string name="ok">ok</string>
    <string name="AddToCart">Add To Cart</string>
    <string name="viewProduct">View Product</string>
</resources>